gcc/testsuite/rust/rustc/ui/macros/issue-105011.rs
fn main() {
    println!(""y); // { dg-error "" "" { target *-*-* } }
}

